feat: implemented event, socket io and others services
